<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="mx.iteso.msc.rodriguez.roberto.mylibrary.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/bookImage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/book"/>
    <Button
        android:id="@+id/mainAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:width="@dimen/button_normal_width"
        android:text="@string/main_authors"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <Button
        android:id="@+id/mainBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:width="@dimen/button_normal_width"
        android:text="@string/main_books"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Button
        android:id="@+id/mainAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:width="@dimen/button_normal_width"
        android:text="@string/main_admin"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</LinearLayout>
